# travel-assistant

./: .gitignore  PROMPT_ENGINEERING.md  README.md  run.sh
backend/: .env.example  pyproject.toml
backend/app/: agent.py  main.py  prompts.py  schemas.py  tools.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_schemas.py  test_tools.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
transcripts/: 01_destination_recommendation.md  02_packing_chain_of_thought.md  03_local_attractions_with_country_info.md
